--- a/estilo.css
+++ b/estilo.css
@@ -42,3 +42,10 @@ h3 {
 	background-color: white;
 
 }
+footer {
+	width: 100%;
+	height: 200px;
+	background-color: black;
+	color: white;
+	margin-top: 40px;
+}
