--- a/css/main.css
+++ b/css/main.css
@@ -72,3 +72,35 @@ header {
 	background-size: cover;
 	background-position: center;
 }
+
+.body{
+	background: #9c332c;
+}
+
+.pagina{
+	display: flex;
+	justify-content: space-around;
+	font-family: sans-serif;
+}
+
+.pagina span{
+	color: rgb(14, 171, 219);
+	margin-top: 100px;
+	font-size: 34px;
+}
+
+.tarjeta{
+	padding: 10px;
+	border-radius: 25px;
+	border: 1px snow;
+	text-align: center;
+}
+
+.tarjeta label{
+	text-transform: capitalize;
+}
+
+.tarjeta img{
+	height: 256px;
+	width: 256px;
+}
