--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,6 @@ ul {
     margin: auto;
 }
 
-/* Navegacion */
 .nav-main {
     font-size: 30px;
     display: flex;
@@ -67,6 +66,7 @@ ul {
     height: 550px;
     background: url("../imgs/Fondo-Pacman.png") no-repeat center center/cover;
     padding-bottom: 50px;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,4 +88,60 @@ ul {
 
 .btn:hover{
     opacity: .7;
+}
+
+.showcase h2,
+.showcase p {
+    margin-bottom: 10px;
+}
+
+hr {
+    margin: 10px 0;
+}
+
+.news-cards {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 25px;
+    margin: 10px 0;
+}
+
+.news-cards img {
+    width: 100%;
+    height: 180px;
+}
+
+.news-cards h3 {
+    font-size: 20px;
+    margin: 10px 0;
+}
+
+.news-cards a {
+    padding: 10px 0;
+    color: aliceblue;
+    text-transform: uppercase;
+    display: inline-block;
+    font-weight: bold;
+}   
+
+.news-cards a:hover {
+    text-decoration: underline;
+}
+
+.cards-banner-one {
+    width: 100%;
+    height: 350px;
+    background: url("../imgs/Fondo-Monedas.jpg");
+    margin-bottom: 40px;
+}
+
+.cards-banner-one .content {
+    width: 40%;
+    padding: 90px 0 0 30px;
+    color: aliceblue;
+}
+
+.cards-banner-one p,
+.cards-banner-one h2 {
+    margin: 10px 0 20px 0;
 }
