--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,8 @@ ul {
 .showcase h2,
 .showcase p {
     margin-bottom: 10px;
+    padding: 10px 20px;
+    text-align: center;
 }
 
 hr {
@@ -144,4 +146,40 @@ hr {
 .cards-banner-one p,
 .cards-banner-one h2 {
     margin: 10px 0 20px 0;
+}
+
+.cards-banner-two {
+    background: url("../imgs/Mando.jpg") no-repeat center center/cover;
+    width: 100%;
+    height: 350px;
+}
+
+.cards-banner-two .content {
+    width: 50%;
+    padding: 100px 0 0 30px;
+    color: aliceblue;
+}
+
+.social {
+    margin: 50px;
+}
+
+.social p{
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.links a {
+    margin: 0 30px;
+}
+
+.links a i {
+    font-size: 3rem;
 }
