--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,7 @@ hr {
 .cards-banner-one {
     width: 100%;
     height: 350px;
-    background: url("../imgs/Fondo-Monedas.jpg");
+    background: url("../imgs/Fondo-Persona.jpg");
     margin-bottom: 40px;
 }
 
