--- a/css/main.css
+++ b/css/main.css
@@ -130,13 +130,6 @@ hr {
     text-decoration: underline;
 }
 
-.cards-banner-one {
-    width: 100%;
-    height: 350px;
-    background: url("../imgs/Fondo-Persona.jpg");
-    margin-bottom: 40px;
-}
-
 .cards-banner-one .content {
     width: 40%;
     padding: 90px 0 0 30px;
@@ -182,4 +175,38 @@ hr {
 
 .links a i {
     font-size: 3rem;
+}
+
+.slider {
+    width: 100%;
+    height: 350px;
+    margin-bottom: 40px;
+    overflow: hidden;
+}
+
+.slider ul {
+    display: flex;
+    animation: cambio 20s infinite alternate linear;
+}
+
+.slider li {
+    width: 100%;
+    list-style: none;
+}
+
+.slider img {
+    width: 100%;
+    height: 100%;
+    padding: 90px 0 0 30px;
+}
+
+@keyframes cambio {
+    0% {margin-left: 0;}
+    20% {margin-left: 0;}
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+    75% {margin-left: -300%;}
+    100% {margin-left: -300%;}
 }
